--- a/style/style.styl
+++ b/style/style.styl
@@ -6,5 +6,6 @@
 // COMMON
 @require './stylus/common';
 @require './stylus/header';
+@require './stylus/about';
 // PAGES
 @require './stylus/home';
