--- a/style/stylus/base.styl
+++ b/style/stylus/base.styl
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans|Raleway');
+
 html, body {
 	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 	margin: 0;
 	padding: 0;
-	background: $ultra-light-grey;
-	color: $primary-black;
+	font-family: 'Raleway', sans-serif;
+
 }
 
 *,
@@ -16,6 +18,7 @@ html {
 	height: 100%;
 	box-sizing: border-box;
 	background-color: $primary-color;
+	background: url("/style/images/background.jpg") center center / cover;
 }
 
 // TODO: uncomment when footer is added (for sticky footer)
@@ -31,20 +34,21 @@ figure {
 }
 
 h1, h2, h3, h4, h5 {
-	font-weight: 400;
+	font-family: 'Josefin Sans', sans-serif;
 	margin: 0;
 }
 
 h1 {
-	font-size: 22px;
+	font-size: 25px;
 }
 
 h2 {
-	font-size: 18px;
+	font-size: 20px;
 }
 
 p {
-	font-size: 14px;
+	font-size: 16px;
+	line-height: 1.3;
 	font-weight: 100;
 	margin: 0;
 }
@@ -62,6 +66,35 @@ a {
 
 .desktop-only {
 	display: none;
+}
+
+main.sticky {
+	padding-top: $header-height;
+}
+
+#app {
+	>div.content {
+		.modal-background {
+			position: fixed;
+			width: 100%;
+			height: 100%;
+			background: rgba(0, 0, 0, 0);
+			z-index: -1;
+			transition: background .75s;
+		}
+		main {
+			transition: transform .75s;
+		}
+		&.modal-open {
+			.modal-background {
+				background: rgba(0, 0, 0, 0.9);
+				z-index: 998;
+			}
+			main {
+				// transform: scale(0.8);
+			}
+		}
+	}
 }
 
 @media screen and (min-width: $tablet) {
@@ -82,14 +115,14 @@ a {
 
 @media screen and (min-width: $desktop) {
 	h1 {
-		font-size: 26px;
+		font-size: 29px;
 	}
 
 	h2 {
-		font-size: 20px;
+		font-size: 22px;
 	}
 
 	p {
-		font-size: 16px;
+		font-size: 18px;
 	}
 }
