--- a/style/stylus/header.styl
+++ b/style/stylus/header.styl
@@ -1,44 +1,17 @@
-header.a {
+header {
+  padding: 10px 0;
   position: sticky;
   height: $header-height;
   width: 100%;
   box-sizing: border-box;
-  z-index: 20;
-  top: 0;
-
-  .logo {
-    position: relative;
-    background: url('/style/images/logo.png') center center / contain no-repeat;
-    width: 100%;
-    height: 100%;
-    margin: auto;
-  }
-  &.sticky {
-    background-color: white !important;
-    border-bottom: 1px solid grey;
-
-    .logo {
-      width: 40% !important;
-      left: -30% !important;
-    }
-  }
-
-}
-
-
-header.b {
-  padding: 5px 0
-  position: sticky;
-  height: $header-height;
-  width: 100%;
-  box-sizing: border-box;
-  z-index: 20;
+  z-index: 99;
   transition: top .5s, background-color .5s;
   top: -50px;
-  background-color: $primary-color;
+  // background-color: $primary-color;
   .logo {
     position: relative;
-    background: url('/style/images/logo.png') center center / contain no-repeat;
+    transform: rotate(3deg);
+    background: url('/style/images/name.png') center center / contain no-repeat;
     width: 100%;
     height: 100%;
     margin: auto;
@@ -46,13 +19,14 @@ header.b {
   }
 
   &.sticky {
+    position: fixed;
     top: 0;
     background-color: white;
     border-bottom: 1px solid grey;
 
     .logo {
       width: 40%;
-      margin: 0;
+      margin: 0 0 0 10px;
     }
 
   }
