--- a/style/stylus/common.styl
+++ b/style/stylus/common.styl
@@ -1,19 +1,3 @@
-.plus {
-  position: absolute;
-  &.vertical {
-    left: 10%;
-    width: 20px;
-    height: 50%;
-    background: url('/style/images/plus-1.png') center center / contain no-repeat;
-  }
-  &.horizontal {
-    left: 10%;
-    width: 80%;
-    height: 20px;
-    background: url('/style/images/plus-2.png') center center / contain no-repeat;
-  }
-}
-
 .modal {
   z-index: 999;
   position: fixed;
@@ -42,4 +26,8 @@
     margin: auto;
     cursor: pointer;
   }
+}
+
+.pink {
+  color: $pink;
 }
