--- a/style/stylus/about.styl
+++ b/style/stylus/about.styl
@@ -1,10 +1,12 @@
 .about {
-  background: #fff;
   padding: 10px 30px;
   h1 {
     margin-bottom: 10px;
   }
   p {
-    text-align: justify;
+    font-weight: 600;
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
   }
 }
