--- a/style/stylus/common.styl
+++ b/style/stylus/common.styl
@@ -13,21 +13,60 @@
 }
 
 .button {
-  margin: 10px 0;
-  span {
-    display: block;
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
+  z-index: 9999;
+  overflow: hidden;
+  text-transform: uppercase;
+  margin: 10px auto;
+  max-width: 150px;
+  max-height: 40px;
+  border-radius: 100px;
+  background: rgba(0, 0, 0, 0.5);
+  padding: 5px;
+  color: $white;
+  // bottom: 0;
+  transition: bottom .75s, max-width .75s;
+  >span {
+    display: inline-block;
+    vertical-align: middle;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
     text-align: center;
     border: 1px solid;
     border-radius: 50%;
     font-size: 30px;
-    margin: auto;
     cursor: pointer;
+    transition: transform 1s, font-size 1s;
+  }
+  >p {
+    display: inline-block;
+    font-size: 14px;
+    vertical-align: middle;
+    width: 100px;
+    text-align: center;
+  }
+  &.close {
+    position: fixed;
+    bottom: 20px !important;
+    left: 0;
+    right: 0;
+    margin: auto;
+    max-width: 40px;
+    >p {
+      display: none;
+    }
+    >span {
+      transform: rotateZ(45deg);
+      border: 0;
+      font-size: 50px;
+    }
   }
 }
 
 .pink {
   color: $pink;
+}
+
+.italic {
+  font-style: italic;
 }
