--- a/style/stylus/home.styl
+++ b/style/stylus/home.styl
@@ -1,6 +1,6 @@
 .landing {
 	width: 100%;
-  height: 80vh;
+  height: 90vh;
 	background: url('/style/images/joe@2x.jpg') 0 0/cover no-repeat;
 	position: relative;
 	>div {
@@ -17,6 +17,20 @@
 		h2 {
 			color: $green;
 		}
+	}
+	.gradient {
+		position: absolute;
+		top: 0;
+		opacity: 0.1;
+		background: rgba(255, 255, 255, 0); /* For browsers that do not support gradients */
+	  /* For Safari 5.1 to 6.0 */
+	  background: -webkit-linear-gradient(left, #e833b2, #53a0fe 48%, #01dc57);
+	  /* For Opera 11.1 to 12.0 */
+	  background: -o-linear-gradient(left, #e833b2, #53a0fe 48%, #01dc57);
+	  /* For Fx 3.6 to 15 */
+	  background: -moz-linear-gradient(left, #e833b2, #53a0fe 48%, #01dc57);
+	  /* Standard syntax */
+	  background: linear-gradient(to right, #e833b2, #53a0fe 48%, #01dc57);
 	}
 }
 
