more styling + adding copy

--- a/style/stylus/about.styl
+++ b/style/stylus/about.styl
@@ -20,3 +20,37 @@
     text-align: center;
   }
 }
+
+.contact {
+  max-width: 800px;
+  margin: 0 auto 20px;
+  >div {
+    width: 47.5%;
+    display: inline-block;
+    text-align: center;
+    padding: 10px 0;
+    border-radius: 5px;
+    cursor: pointer;
+    &.li {
+      width: 100%;
+      border: 2px solid #628cc4;
+      display: block;
+      margin: 0 auto 10px;
+    }
+    &.cv {
+      border: 2px solid $pink;
+      margin-right: 2.5%;
+    }
+    &.contact {
+      border: 2px solid $green;
+      margin-left: 2.5%;
+    }
+  }
+
+}
+
+@media screen and (min-width: $tablet) {
+  .about {
+    padding: 10px 200px;
+  }
+}
