--- a/style/stylus/home.styl
+++ b/style/stylus/home.styl
@@ -1,16 +1,18 @@
 .landing {
 	width: 100%;
   height: 90vh;
-	background: url('/style/images/joe@2x.jpg') 0 0/cover no-repeat;
 	position: relative;
 	>div {
-		text-align: center;
 		position: absolute;
 		bottom: 0;
 		margin: auto;
 		left: 0;
 		right: 0;
+	}
+	&-text {
+		text-align: center;
 		padding: 20px 0;
+		z-index: 30;
 		h1 {
 			color: $pink;
 		}
@@ -18,7 +20,13 @@
 			color: $green;
 		}
 	}
-	.gradient {
+	&-image {
+		position: absolute;
+		top: 0;
+		background: url('/style/images/joe@2x.jpg') center center / cover no-repeat;
+		z-index: 20;
+	}
+	&-gradient {
 		position: absolute;
 		top: 0;
 		opacity: 0.1;
@@ -31,6 +39,19 @@
 	  background: -moz-linear-gradient(left, #e833b2, #53a0fe 48%, #01dc57);
 	  /* Standard syntax */
 	  background: linear-gradient(to right, #e833b2, #53a0fe 48%, #01dc57);
+	}
+	&-background {
+		position: absolute;
+		top: 0;
+		background: rgba(255, 255, 255, 0); /* For browsers that do not support gradients */
+	  /* For Safari 5.1 to 6.0 */
+	  background: -webkit-linear-gradient(left, #b7288d, #366bab 48%, #01943b);
+	  /* For Opera 11.1 to 12.0 */
+	  background: -o-linear-gradient(left, #b7288d, #366bab 48%, #01943b);
+	  /* For Fx 3.6 to 15 */
+	  background: -moz-linear-gradient(left, #b7288d, #366bab 48%, #01943b);
+		/* Standard syntax */
+		background-image: linear-gradient(to right, #b7288d, #366bab 48%, #01943b);
 	}
 }
 
@@ -50,3 +71,12 @@
 // 		}
 // 	}
 // }
+
+@media screen and (min-width: $tablet) {
+	.landing-image {
+		width: 50%;
+		max-width: 420px;
+		border: 3px solid $black;
+		background: url('/style/images/joe@2x.jpg') center center / cover no-repeat;
+	}
+}
