--- a/style/stylus/common.styl
+++ b/style/stylus/common.styl
@@ -5,10 +5,28 @@
   top: 150%;
   width: 100vw;
   height: 100vh;
-  padding: 30px;
+  padding: 30px 30px 50px;
   transition: top .5s ease-in-out;
   &.active {
     top: 0;
+  }
+  h1, h2, h3, h4 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  overflow: auto;
+  p {
+    margin-bottom: 20px;
+  }
+  .quote {
+    padding: 10px 30px;
+    color: $pink;
+    font-style: italic;
+    p {
+      font-weight: 600;
+      max-width: 350px;
+      margin: 0 auto 20px;
+    }
   }
 }
 
@@ -17,6 +35,7 @@
   padding: 20px 0;
   box-sizing: content-box;
   .button {
+    cursor: pointer;
     box-sizing: border-box;
     z-index: 9999;
     overflow: hidden;
@@ -28,7 +47,6 @@
     background: rgba(0, 0, 0, 0.5);
     padding: 5px;
     color: $white;
-    // bottom: 0;
     transition: bottom .75s, max-width .75s;
     >span {
       display: inline-block;
@@ -40,7 +58,6 @@
       border: 1px solid;
       border-radius: 50%;
       font-size: 30px;
-      cursor: pointer;
       transition: transform 1s, font-size 1s;
     }
     >p {
@@ -75,4 +92,13 @@
 
 .italic {
   font-style: italic;
+}
+
+@media screen and (min-width: $tablet) {
+  .modal {
+    padding: 30px 200px 50px;
+    h1, h2, h3, h4 {
+      text-align: left;
+    }
+  }
 }
