--- a/style/stylus/base.styl
+++ b/style/stylus/base.styl
@@ -5,7 +5,6 @@ html, body {
 	margin: 0;
 	padding: 0;
 	font-family: 'Raleway', sans-serif;
-
 }
 
 *,
@@ -17,17 +16,7 @@ html, body {
 html {
 	height: 100%;
 	box-sizing: border-box;
-	// background-color: $primary-color;
-	// background: url("/style/images/background.jpg") center center / cover;
 }
-
-// TODO: uncomment when footer is added (for sticky footer)
-// body {
-// 	position: relative;
-//  min-height: 100vh;
-// 	TODO: change padding-bottom to height of footer
-// 	padding-bottom: 330px;
-// }
 
 figure {
 	margin: 0;
@@ -36,7 +25,7 @@ figure {
 h1, h2, h3, h4, h5 {
 	font-family: 'Montserrat Subrayada', sans-serif;
 	margin: 0;
-	letter-spacing: -0.3px;
+	letter-spacing: -1px;
 }
 
 h1 {
@@ -54,10 +43,14 @@ p {
 	margin: 0;
 }
 
-ul {
-	list-style: none;
-	padding: 0;
-	margin: 0;
+// ul {
+// 	list-style: none;
+// 	padding: 0;
+// 	margin: 0;
+// }
+
+li {
+	margin-bottom: 20px;
 }
 
 a {
@@ -67,10 +60,6 @@ a {
 
 .desktop-only {
 	display: none;
-}
-
-main.sticky {
-	// padding-top: $header-height;
 }
 
 #app {
