--- a/style/stylus/header.styl
+++ b/style/stylus/header.styl
@@ -1,18 +1,29 @@
 header {
-  padding: 10px 0;
+  padding: 10px;
   position: absolute;
   height: $header-height;
   width: 100%;
   box-sizing: border-box;
   z-index: 99;
   top: 0;
-  .logo {
+  .social-icons {
+    float: right;
+    color: $grey;
+  }
+  h1, h2, h3, h4 {
+    color: $grey;
+  }
+  >div {
+    display: inline-block;
+  }
+}
+
+
+@media screen and (min-width: $tablet) {
+  header {
     position: relative;
-    transform: rotate(3deg);
-    background: url('/style/images/name.png') center center / contain no-repeat;
-    width: 100%;
-    height: 100%;
-    margin: auto;
-    transition: width .5s, margin .5s;
+    >div {
+      display: inline-block !important;
+    }
   }
 }
