--- a/style/stylus/home.styl
+++ b/style/stylus/home.styl
@@ -23,6 +23,8 @@
 	&-image {
 		position: absolute;
 		top: 0;
+		max-width: 420px;
+		// border: 3px solid $black;
 		background: url('/style/images/joe@2x.jpg') center center / cover no-repeat;
 		z-index: 20;
 	}
