adding finishing touches

--- a/style/stylus/about.styl
+++ b/style/stylus/about.styl
@@ -24,6 +24,7 @@
 .contact {
   max-width: 800px;
   margin: 0 auto 20px;
+  text-transform: uppercase;
   >a {
     width: 48.5%;
     display: inline-block;
