--- a/style/stylus/home.styl
+++ b/style/stylus/home.styl
@@ -31,6 +31,7 @@
 	}
 	&-gradient {
 		position: absolute;
+		z-index: 20;
 		top: 0;
 		opacity: 0.1;
 		background: rgba(255, 255, 255, 0); /* For browsers that do not support gradients */
