--- a/style/stylus/colors.styl
+++ b/style/stylus/colors.styl
@@ -4,7 +4,7 @@ $black = #000;
 $primary-color = #EBBE60;
 $green = #00dc57;
 $pink = #e832b2;
-$grey = lighten($black, 60);
+$grey = #999;
 
 
 $secondary-green = #43dd80;
