--- a/style/stylus/variables.styl
+++ b/style/stylus/variables.styl
@@ -1,6 +1,7 @@
 // SCREEN
 $tablet = 750px;
-$desktop = 1300px;
+$desktop = 1200px;
+$large-screen = 1500px;
 $screen-size-transition = 0.2s;
 
 // HEADER
