--- a/style/stylus/home.styl
+++ b/style/stylus/home.styl
@@ -16,9 +16,12 @@
 		z-index: 30;
 		h1 {
 			color: $pink;
+			text-shadow: 1px 1px 0px rgba(255, 0, 0, 0.5);
+
 		}
 		h2 {
 			color: $green;
+			text-shadow: 1px 1px 0px rgba(0, 60, 227, 0.74);
 		}
 	}
 	&-image {
