more styling, adding extra portfolio item

--- a/style/stylus/about.styl
+++ b/style/stylus/about.styl
@@ -17,6 +17,11 @@
 
 .portfolio-item {
   background: $secondary-green;
+  max-height: 250px;
+  overflow: hidden;
+  &.pink {
+    background: $pink;
+  }
   &_image {
     text-align: center;
   }
