--- a/style/stylus/home.styl
+++ b/style/stylus/home.styl
@@ -52,38 +52,21 @@
 		top: 0;
 		background: rgba(255, 255, 255, 0); /* For browsers that do not support gradients */
 	  /* For Safari 5.1 to 6.0 */
-	  background: -webkit-linear-gradient(left, #b7288d, #366bab 48%, #01943b);
+	  background: -webkit-linear-gradient(left, rgba(232, 51, 178, 0.65), #9dc9ff 50%, rgba(68, 220, 128, 0.74));
 	  /* For Opera 11.1 to 12.0 */
-	  background: -o-linear-gradient(left, #b7288d, #366bab 48%, #01943b);
+	  background: -o-linear-gradient(left, rgba(232, 51, 178, 0.65), #9dc9ff 50%, rgba(68, 220, 128, 0.74));
 	  /* For Fx 3.6 to 15 */
-	  background: -moz-linear-gradient(left, #b7288d, #366bab 48%, #01943b);
+	  background: -moz-linear-gradient(left, rgba(232, 51, 178, 0.65), #9dc9ff 50%, rgba(68, 220, 128, 0.74));
 		/* Standard syntax */
-		background-image: linear-gradient(to right, #b7288d, #366bab 48%, #01943b);
+		background-image: linear-gradient(to right, rgba(232, 51, 178, 0.65), #9dc9ff 50%, rgba(68, 220, 128, 0.74));
 	}
 }
-
-// .social {
-// 	height: 10vh;
-// 	margin: 5vh 0;
-// 	text-align: center;
-// 	>div {
-// 		display: inline-block;
-// 		height: 100%;
-// 		width: 50%;
-// 		&#contact {
-// 			background: url('/style/images/contact.png') center center / contain no-repeat;
-// 		}
-// 		&#linkedin {
-// 			background: url('/style/images/contact-2.png') center center / contain no-repeat;
-// 		}
-// 	}
-// }
 
 @media screen and (min-width: $tablet) {
 	.landing-image {
 		width: 50%;
 		max-width: 420px;
-		border: 3px solid $black;
+		border: 3px solid $white;
 		background: url('/style/images/joe@2x.jpg') center center / cover no-repeat;
 	}
 }
