--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Crimson+Text|Montserrat:700');
+
 html, body {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   margin: 0;
@@ -17,10 +19,11 @@ body {
 
 h1, h2, h3 {
   margin: 0 0 10px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Crimson Text', serif;
 }
 
 h1 {
+  font-family: 'Montserrat', sans-serif;
   text-shadow: 2px 2px #c35261;
 }
 
