--- a/style.css
+++ b/style.css
@@ -24,12 +24,12 @@ h1, h2, h3 {
 
 h1 {
   font-family: 'Montserrat', sans-serif;
-  text-shadow: 2px 2px #c35261;
+  text-shadow: 2px 2px rgba(0,0,0,0.25);
 }
 
 h2 {
   font-weight: 300;
-  text-shadow: 1px 1px #c35261;
+  text-shadow: 1px 1px rgba(0,0,0,0.25);
 }
 
 h3 {
@@ -58,7 +58,7 @@ h3 {
   margin: auto;
   margin-bottom: 20px;
   border: 2px solid white;
-  box-shadow: #8a8a8a 0px 0px 3px 1px
+  box-shadow: rgba(0,0,0,0.4) 0px 0px 3px 1px
 }
 
 ul {
